--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,96 +1,162 @@
 <!DOCTYPE html>
-	<html>
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="description" content="Designer, Urbanist and Storyteller, passionate about creating experiences that connect with people." />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>{{ page.title }}</title>
-	<link href='https://fonts.googleapis.com/css?family=Cabin:400,400italic,700,700italic|Ubuntu:500|Fjalla+One|Roboto+Slab:300|Bitter:400i' rel='stylesheet' type='text/css'>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta name="description" content="Designer, Urbanist and Storyteller, passionate about creating experiences that connect with people." />
+        <meta name="keywords" content="">
+        <meta name="author" content="traivan98"> <!--Drop Portfolio Theme-->
 
-	<!-- Latest compiled and minified CSS --> 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-	<link rel="stylesheet" href="/assets/css/whhg.css">
-	<link rel="stylesheet" type="text/css" href="/assets/css/styles.css" />
-	<link rel="stylesheet" type="text/css" href="/assets/css/BootstrapXL.css" />
-	
-	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script src="/assets/bootstrap/js/bootstrap.min.js"></script>
-	<script src="/assets/js/imagesloaded.pkgd.min.js"></script>
-	<script src="/assets/js/isotope.pkgd.min.js"></script>
-	<script src="/assets/js/bootstrap-select.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="/assets/css/bootstrap-select.min.css" />
-	<script src="/assets/js/jquery.fluidbox.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="/assets/css/fluidbox.css" />
-
-	<link rel="stylesheet" href="../assets/css/lightbox.css"> 
-
-
-	<link rel="shortcut icon" href="/assets/images/favicon-jk.ico">
-    <link rel="apple-touch-icon" href="/assets/images/favicon-jk.png"> 
-</head>
+        <title>{{ page.title }}</title>
 
 
 
-<body>
 
-<section id="page" class="container"><!-- PAGE -->
-	<nav class="navbar-fixed-top">
-		<div class="col-md-12 col-xl-12">
-			<uL id="navigation" align="right">
-				<li><a href="http://www.jamiemkwan.com/profile">profile</a></li>
-				<li>&nbsp;&nbsp;&nbsp;</li>
-				<li><a href="http://www.jamiemkwan.com" class="active-page">work</a></li>
-				<li>&nbsp;&nbsp;&nbsp;</li>
-				<!-- <li><a href="http://www.jamiemkwan.com/notes" class="active-page">notes</a></li>
-				<li>&nbsp;&nbsp;&nbsp;</li> -->
-				<li><a href="http://www.curiosityinfocus.tumblr.com">travel</a></li>
-<!-- 					<li>&nbsp;&nbsp;&nbsp;</li>					
-				<li><a href="../contact">contact</a></li> -->
-			</ul>
-		</div>
-	</nav>
+        <!-- ===============    favicon link     =============== -->
+        <link rel="icon" type="image/png" href="assets/favicon-jk.ico" />
 
-	<div class="body-mobile">
+        <!-- ===============    Bootstrap core CSS     =============== -->
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
 
-    <div id="header" class="row">
-        <div class="col-md-12 col-xl-12">
-                <a href="http://jamiemkwan.com"><img src="/assets/images/logo.png" width=250px></img></a>
-                    <h1>I'm a <a href="http://jamiemkwan.com/profile" class="designer">designer</a> / <a href="http://jamiemkwan.com/profile" class="urbanist">strategist</a> / <a href="http://jamiemkwan.com/profile" class="storyteller">storyteller</a>&#42;</h1>
-                <h2>&#42;I'm passionate about creating experiences that connect with people.</h2>
-                <hr>
+        <!-- ===============    font-awesome core CSS     =============== -->
+        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" media="all" />
+
+        <!-- ===============    theme core CSS     =============== -->
+        <link rel="stylesheet" type="text/css" href="css/effect1.css" media="all" />
+
+        <!-- ===============    theme core CSS     =============== -->
+        <link rel="stylesheet" type="text/css" href="css/theme.css" media="all" />
+
+        <!-- ===============    responsive core CSS     =============== -->
+        <link rel="stylesheet" type="text/css" href="css/responsive.css" media="all" />
+
+        <!-- ===============    spacing core CSS     =============== -->
+        <link rel="stylesheet" type="text/css" href="css/spacing.min.css" media="all" />
+
+        <!-- ===============    theme content color core CSS     =============== -->
+        <link rel="stylesheet" type="text/css" href="css/theme-content-color/blue.css" media="all" />
+
+
+        <!-- ===============    Google fonts CSS     =============== -->
+        <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700,500|Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
+
+        <!-- Just for debugging purposes. Don't actually copy this line! -->
+        <!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
+
+        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    </head>
+
+    <body>
+        
+
+
+        <!-- ===============    Start template markup     =============== -->
+
+        <!-- START preloader section -->
+        <div class="ip-container" id="ip-container">
+            <div class="ip-header">
+                <div class="ip-loader">
+                    <svg class="ip-inner" width="60px" height="60px" viewBox="0 0 80 80">
+                        <path class="ip-loader-circlebg" d="M40,10C57.351,10,71,23.649,71,40.5S57.351,71,40.5,71 S10,57.351,10,40.5S23.649,10,40.5,10z"/>
+                        <path id="ip-loader-circle" class="ip-loader-circle" d="M40,10C57.351,10,71,23.649,71,40.5S57.351,71,40.5,71 S10,57.351,10,40.5S23.649,10,40.5,10z"/>
+                    </svg>
+                </div>
+            </div>
+            <div class="menu-wrapper">
+                <div class="container">
+                    <header>
+                        <div class="logo">
+                            <a href="index.html">
+                                <img src="assets/logo.png" width=300px alt="Jamie Kwan">
+                            </a>
+                        </div>
+                        <div class="mobile-menu">
+                            <span class="line"></span>
+                        </div>
+                        <nav>
+                            <ul>
+                                <li class="active"><a href="#work">Work</a></li>
+                                <li><a href="about.html">Profile</a></li>
+                                <li><a href="blog.html">Thoughts</a></li>
+                                <li><a href="mailto:jamie@studiobud.ca?subject=Hello!">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </header>
+                </div>
+            </div>
         </div>
-    </div>
-		{{ content }}	
-	</div><!-- /.container -->
+        <!--/ END preloader section -->
+
+{{ content }}
+
+        <!-- START footer section -->
+        <footer class="atom-footer-area small-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="copyright">
+                            <p>Copyright &copy; 2017 <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">Jamie Kwan</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 text-right">
+                        <ul class="list-inline social-icons">
+                            <li><a href="http://www.facebook.com/jamiemkwan" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="http://www.twitter.com/jamiemkwan" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="http://www.instagram.com/jamiemkwan" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/jamiemkwan/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="mailto:jamie@studiobud.ca?subject=Hello!"><i class="fa fa-envelope"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!--/ END footer section -->
+
+        <!-- ===============    /End template markup     =============== -->
 
 
+        <!-- ===============    jQuery core jquery     =============== -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/jquery-1.11.3.min.js"><\/script>')</script>
+        <!-- ===============    Bootstrap core jquery     =============== -->
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
+        <!-- ===============    modernizr core jquery     =============== -->
+        <script type="text/javascript" src="js/modernizr.custom.js"></script>
 
-	<hr>
-	<div id="footer" class="row">
-		<div class="col-xs-6 col-md-6 col-xl-6">
-			<a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">&#169; 2016 <strong>Jamie Kwan</strong></a>
-		</div>
+        <!-- ===============    classie core jquery     =============== -->
+        <script type="text/javascript" src="js/classie.js"></script>
 
-		<div id="social-icon" class="col-xs-6 col-md-6 col-xl-6" align="right">
-			<a href="mailto:jamie@studiobud.ca"><i class="icon-envelope"></i></a>&nbsp;&nbsp;&nbsp;				
-			
-			<a href="https://www.facebook.com/jamiemkwan"><i class="icon-circlefacebook"></i></a>&nbsp;&nbsp;&nbsp;				
-			<a href="https://www.twitter.com/jamiemkwan"><i class="icon-circletwitter"></i></a>&nbsp;&nbsp;&nbsp;
-			<a href="https://www.instagram.com/jamiemkwan"><i class="icon-circleinstagram"></i></a>
-			<!-- <a href="https://ca.linkedin.com/in/jamiemkwan"><i class="icon-linkedin"></i></a> -->
-		</div>	
-	</div>
-	</div>
+        <!-- ===============    pathLoader core jquery     =============== -->
+        <script type="text/javascript" src="js/pathLoader.js"></script>
 
-</section>
-<script src="../assets/js/lightbox.js"></script>
-</body>
+        <!-- ===============    imagesloaded core jquery     =============== -->
+        <script type="text/javascript" src="js/imagesloaded.pkgd.min.js"></script>
+        
+        <!-- ===============    maps api core JavaScript     =============== -->
+        <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=true"></script>
+
+        <!-- ===============    stellar core jquery     =============== -->
+        <script type="text/javascript" src="js/jquery.stellar.min.js"></script>
+
+        <!-- ===============    smooth core jquery     =============== -->
+        <script type="text/javascript" src="js/smooth.js"></script>
+
+        <!-- ===============    isotope core jquery     =============== -->
+        <script type="text/javascript" src="js/isotopoe.pkgd.min.js"></script>
+
+        <!-- ===============    masonary core jquery     =============== -->
+        <script type="text/javascript" src="js/masonary.min.js"></script>
+
+        <!-- ===============    ROW JavaScript Plugins    =============== -->
+        <script type="text/javascript" src="js/row-plugins.js"></script>
+
+        <!-- ===============    Active core JavaScript     =============== -->
+        <script type="text/javascript" src="js/active.js"></script>
+    </body>
 </html>
