--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -108,7 +108,7 @@
         </div>
         <!--/ END page title section -->
 
-
+<div id="txt-01">
         <!-- START parallax -->
         <div class="small-section">
             <div class="container">
@@ -121,6 +121,7 @@
             </div>
         </div>
         <!--/ END parallax -->
+</div>
 
 {{ content }}
 
