create desktop-only and mobile-only styling

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -108,7 +108,7 @@
         </div>
         <!--/ END page title section -->
 
-<div id="txt-01">
+        <div id="desktop-only">
         <!-- START parallax -->
         <div class="small-section">
             <div class="container">
@@ -121,7 +121,7 @@
             </div>
         </div>
         <!--/ END parallax -->
-</div>
+        </div>
 
 {{ content }}
 
