--- a/css/theme.css
+++ b/css/theme.css
@@ -888,12 +888,12 @@ span.detail {
   text-transform: uppercase;
 }
 
-#txt-01 { display:block; }
-#txt-02 { display:none; }
+#desktop-only { display:block; }
+#mobile-only { display:none; }
 
-@media (max-width: 970px) {
-  #txt-01 { display:none; }
-  #txt-02 { display:block; }
+@media (max-width: 900px) {
+  #desktop-only { display:none; }
+  #mobile-only { display:block; }
 }
 
 
