--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -108,19 +108,31 @@
         </div>
         <!--/ END page title section -->
 
-        <div id="desktop-only">
-        <!-- START parallax -->
-        <div class="small-section">
+        <!-- START feature image (mobile only) -->
+        <div id="mobile-only">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="fixed-bg parallax-image img-responsive" data-background="../assets/projects/ad-astra/1.jpg" data-stellar-background-ratio="0.5"></div>
-                        <div class="fixed-bg parallax-image img-responsive" data-background="../assets/projects/ad-astra/3.jpg" data-stellar-background-ratio="0.5"></div>
+                        <img src="../assets/projects/ad-astra/5.jpg" alt="Ad Astra" class="img-responsive"/>
                     </div>
                 </div>
             </div>
-        </div>
-        <!--/ END parallax -->
+        </div>    
+        <!-- END feature image (mobile only) -->
+        
+        <div id="desktop-only">
+            <!-- START parallax -->
+            <div class="small-section">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="fixed-bg parallax-image img-responsive" data-background="../assets/projects/ad-astra/1.jpg" data-stellar-background-ratio="0.5"></div>
+                            <div class="fixed-bg parallax-image img-responsive" data-background="../assets/projects/ad-astra/3.jpg" data-stellar-background-ratio="0.5"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--/ END parallax -->
         </div>
 
 {{ content }}
