load google fonts - profile ID hover effect

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -43,6 +43,7 @@
 
         <!-- ===============    Google fonts CSS     =============== -->
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700,500|Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Fjalla+One|Roboto+Slab|Bitter' rel='stylesheet' type='text/css'>
 
         <!-- Just for debugging purposes. Don't actually copy this line! -->
         <!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
