--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -115,7 +115,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <div class="fixed-bg parallax-image img-responsive" data-background="../assets/projects/ad-astra/1.jpg" data-stellar-background-ratio="0.5"></div>
+                            <div class="fixed-bg parallax-image img-responsive" data-background="../assets/projects/{{ page.featureimg }}/1.jpg" data-stellar-background-ratio="0.5"></div>
                         </div>
                     </div>
                 </div>
