--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -121,9 +121,36 @@
             </div>
             <!--/ END parallax -->
         </div>
+<!-- START section -->
+<div>
+    <div class="container">
+    
+        <div class="row">
+            <div class="col-md-8">
+                <span class="detail">Challenge</span>
+                <h2 class="dark-text mb-10 mt-0 bigfont"><b>{{ page.challenge }}</b></h2>
+                <img src="../images/branding-border.png" alt="" class="heading-border">
+            </div>
+        </div>
 
-{{ content }}
+        <div class="row">
 
+            {{ content }}
+
+            <div class="col-md-4 col-sm-8">
+                <ul class="project-info list-unstyled">
+                  <li>Category: <span>Interactive Exhibition</span></li>
+                  <li>Client: <span>Bata Shoe Museum / Nuit Blanche</span></li>
+                  <li>Date: <span>March - October 2013</span></li>
+                  <li>Team: <span>Neveen Abdel-Aal, Ryan Giuricich, Kevin Pu, Helena Skoneiczna, Setareh Shams, Sandra Wojteki, Marcelle Longlade, Jesse Allen, Michael Tai</span></li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+</div>
+<!--/ END section -->
+        
         <!--START image gallery -->
         <div class="container">
             <div class="row"><br><hr><br>
