--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -102,7 +102,7 @@
                     <div class="col-md-7 col-xs-12">
                         <h1>{{ page.title }}</h1>
                         <img src="../images/branding-border.png" alt="" class="heading-border">
-                        <p>{{ page.oneliner }}</p>
+                        <p><b><span class="theme-color">{{ page.slogan }}</span></b>&nbsp;{{ page.oneliner }}</p>
                     </div>
                 </div>
             </div>
