test project details in markup

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -140,10 +140,10 @@
 
             <div class="col-md-4 col-sm-8">
                 <ul class="project-info list-unstyled">
-                  <li>Category: <span>Interactive Exhibition</span></li>
-                  <li>Client: <span>Bata Shoe Museum / Nuit Blanche</span></li>
-                  <li>Date: <span>March - October 2013</span></li>
-                  <li>Team: <span>Neveen Abdel-Aal, Ryan Giuricich, Kevin Pu, Helena Skoneiczna, Setareh Shams, Sandra Wojteki, Marcelle Longlade, Jesse Allen, Michael Tai</span></li>
+                  <li>Category: <span>{{ page.category }}</span></li>
+                  <li>Client: <span>{{ page.client }}</span></li>
+                  <li>Date: <span>{{ page.date }}</span></li>
+                  <li>Team: <span>{{ page.team }}</span></li>
                 </ul>
             </div>
         </div>
