--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -126,7 +126,7 @@
 <div>
     <div class="container">
                     
-         {% if page.challenge == true %}      
+         {% if page.challenge = true %}      
         <div class="row">
             <div class="col-md-8">
                 <span class="detail">Challenge</span>
