--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -126,14 +126,14 @@
 <div>
     <div class="container">
                     
-         {% if page.challenge = true %}      
+        {% for text in page.challenge %}      
         <div class="row">
             <div class="col-md-8">
                 <span class="detail">Challenge</span>
                 <h2 class="dark-text mb-10 mt-0 bigfont"><b>{{ page.challenge }}</b></h2>
                 <img src="../images/branding-border.png" alt="" class="heading-border">
             </div>
-        </div>{% endif %}
+        </div>{% endfor %}
 
         <div class="row">
 
