test new feature image on mobile only

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -135,6 +135,12 @@
             </div>
         </div>{% endfor %}
 
+        <div class="row" id="mobile-only">
+            <div class="col-sm-12 col-xs-12">
+                <img src="../assets/projects/{{ page.featureimg }}/1.jpg" class="img-responsive">
+            </div>
+        </div>
+
         <div class="row">
 
             {{ content }}
