test padding adjustment - page-title

--- a/css/theme.css
+++ b/css/theme.css
@@ -389,7 +389,10 @@ hr {
    04. PAGE TITLE
 ============================================================ */
 .page-title {
-  padding: 50px 0;
+  padding-top: 50px;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-bottom: 25px;
 }
 .page-title h1 {
   font-size: 74px;
