--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -18,6 +18,7 @@
 
         <!-- ===============    Bootstrap core CSS     =============== -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
+		<link rel="stylesheet" type="text/css" href="css/BootstrapXL.css" />
 
         <!-- ===============    font-awesome core CSS     =============== -->
         <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" media="all" />
@@ -99,12 +100,12 @@
         <footer class="atom-footer-area small-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-xl-6">
                         <div class="copyright">
                             <p>Copyright &copy; 2017 <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">Jamie Kwan</a></p>
                         </div>
                     </div>
-                    <div class="col-md-6 text-right">
+                    <div class="col-md-6 col-xl-6 text-right">
                         <ul class="list-inline social-icons">
                             <li><a href="http://www.facebook.com/jamiemkwan" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="http://www.twitter.com/jamiemkwan" target="_blank"><i class="fa fa-twitter"></i></a></li>
