--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,8 +83,8 @@
                         <nav>
                             <ul>
                                 <li class="active"><a href="#work">Work</a></li>
-                                <li><a href="about.html">Profile</a></li>
-                                <li><a href="blog.html">Thoughts</a></li>
+                                <li><a href="profile.html">Profile</a></li>
+                                <li><a href="blog.html">Blog</a></li>
                                 <li><a href="mailto:jamie@studiobud.ca?subject=Hello!">Contact</a></li>
                             </ul>
                         </nav>
