--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -85,8 +85,8 @@
                         <nav>
                             <ul>
                                 <li class="active"><a href="http://www.jamiemkwan.com">Work</a></li>
-                                <li><a href="../about.html">Profile</a></li>
-                                <li><a href="../blog.html">Thoughts</a></li>
+                                <li><a href="../profile.html">Profile</a></li>
+                                <li><a href="../blog.html">Blog</a></li>
                                 <li><a href="mailto:jamie@studiobud.ca?subject=Hello!">Contact</a></li>
                             </ul>
                         </nav>
@@ -131,11 +131,13 @@
             <div class="col-xl-12 col-m-12 col-sm-12 col-xs-12">
                 <img src="../assets/projects/{{ page.featureimg }}/1.jpg" class="img-responsive">
             </div>
+            <br><br>
         </div>
                             
         {% for text in page.challenge %}      
         <div class="row">
             <div class="col-xl-8 col-md-8">
+
                 <span class="detail">Challenge</span>
                 <h2 class="dark-text mb-10 mt-0 bigfont"><b>{{ page.challenge }}</b></h2>
                 <img src="../images/branding-border.png" alt="" class="heading-border">
