--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -18,7 +18,7 @@
 
         <!-- ===============    Bootstrap core CSS     =============== -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
-		<link rel="stylesheet" type="text/css" href="/css/BootstrapXL.css" />
+        <link rel="stylesheet" type="text/css" href="css/BootstrapXL.css" />
 
         <!-- ===============    font-awesome core CSS     =============== -->
         <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" media="all" />
@@ -83,8 +83,8 @@
                         <nav>
                             <ul>
                                 <li><a href="#work">Work</a></li>
-                                <li class="active"><a href="about.html">Profile</a></li>
-                                <li><a href="blog.html">Thoughts</a></li>
+                                <li class="active"><a href="profile.html">Profile</a></li>
+                                <li><a href="blog.html">Blog</a></li>
                                 <li><a href="mailto:jamie@studiobud.ca?subject=Hello!">Contact</a></li>
                             </ul>
                         </nav>
@@ -105,7 +105,7 @@
                             <p>Copyright &copy; 2017 <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">Jamie Kwan</a></p>
                         </div>
                     </div>
-                    <div class="col-md-6 col-xl-6 text-right">
+                    <div class="col-md-6  col-xl-6 text-right">
                         <ul class="list-inline social-icons">
                             <li><a href="http://www.facebook.com/jamiemkwan" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="http://www.twitter.com/jamiemkwan" target="_blank"><i class="fa fa-twitter"></i></a></li>
