update css - vspace to add padding on mobile to feature img

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -129,9 +129,8 @@
         
         <div class="row featureimg-mobile" id="mobile-only">
             <div class="col-xl-12 col-m-12 col-sm-12 col-xs-12">
-                <img src="../assets/projects/{{ page.featureimg }}/1.jpg" class="img-responsive">
+                <img src="../assets/projects/{{ page.featureimg }}/1.jpg" class="img-responsive" vspace="50">
             </div>
-            <br><br>
         </div>
                             
         {% for text in page.challenge %}      
