profile and hide blog reference in nav bar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@
                             <ul>
                                 <li class="active"><a href="#work">Work</a></li>
                                 <li><a href="profile.html">Profile</a></li>
-                                <li><a href="blog.html">Blog</a></li>
+                                <!-- <li><a href="blog.html">Blog</a></li> -->
                                 <li><a href="mailto:jamie@studiobud.ca?subject=Hello!">Contact</a></li>
                             </ul>
                         </nav>
