--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -86,7 +86,7 @@
                             <ul>
                                 <li class="active"><a href="http://www.jamiemkwan.com">Work</a></li>
                                 <li><a href="../profile.html">Profile</a></li>
-                                <li><a href="../blog.html">Blog</a></li>
+                                <!-- <li><a href="../blog.html">Blog</a></li> -->
                                 <li><a href="mailto:jamie@studiobud.ca?subject=Hello!">Contact</a></li>
                             </ul>
                         </nav>
