--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -14,29 +14,32 @@
 
 
         <!-- ===============    favicon link     =============== -->
-        <link rel="icon" type="image/png" href="assets/favicon-jk.ico" />
+        <link rel="icon" type="image/png" href="../assets/favicon-jk.ico" />
 
         <!-- ===============    Bootstrap core CSS     =============== -->
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
-        <link rel="stylesheet" type="text/css" href="css/BootstrapXL.css" />
+        <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" media="all" />
+		<link rel="stylesheet" type="text/css" href="../css/BootstrapXL.css" />
 
         <!-- ===============    font-awesome core CSS     =============== -->
-        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" media="all" />
+        <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css" media="all" />
 
         <!-- ===============    theme core CSS     =============== -->
-        <link rel="stylesheet" type="text/css" href="css/effect1.css" media="all" />
+        <link rel="stylesheet" type="text/css" href="../css/effect1.css" media="all" />
 
         <!-- ===============    theme core CSS     =============== -->
-        <link rel="stylesheet" type="text/css" href="css/theme.css" media="all" />
+        <link rel="stylesheet" type="text/css" href="../css/theme.css" media="all" />
 
         <!-- ===============    responsive core CSS     =============== -->
-        <link rel="stylesheet" type="text/css" href="css/responsive.css" media="all" />
+        <link rel="stylesheet" type="text/css" href="../css/responsive.css" media="all" />
 
         <!-- ===============    spacing core CSS     =============== -->
-        <link rel="stylesheet" type="text/css" href="css/spacing.min.css" media="all" />
+        <link rel="stylesheet" type="text/css" href="../css/spacing.min.css" media="all" />
 
         <!-- ===============    theme content color core CSS     =============== -->
-        <link rel="stylesheet" type="text/css" href="css/theme-content-color/blue.css" media="all" />
+        <link rel="stylesheet" type="text/css" href="../css/theme-content-color/blue.css" media="all" />
+
+        <!-- ===============    Lightbox CSS    =============== -->        
+        <link rel="stylesheet" href="../css/lightbox.css"> 
 
 
         <!-- ===============    Google fonts CSS     =============== -->
@@ -56,7 +59,6 @@
     <body>
         
 
-
         <!-- ===============    Start template markup     =============== -->
 
         <!-- START preloader section -->
@@ -73,8 +75,8 @@
                 <div class="container">
                     <header>
                         <div class="logo">
-                            <a href="index.html">
-                                <img src="assets/logo.png" width=300px alt="Jamie Kwan">
+                            <a href="../index.html">
+                                <img src="../assets/logo.png" width=300px alt="Jamie Kwan">
                             </a>
                         </div>
                         <div class="mobile-menu">
@@ -82,9 +84,9 @@
                         </div>
                         <nav>
                             <ul>
-                                <li><a href="#work">Work</a></li>
-                                <li class="active"><a href="profile.html">Profile</a></li>
-                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="http://www.jamiemkwan.com">Work</a></li>
+                                <li class="active"><a href="../profile.html">Profile</a></li>
+                                <!-- <li><a href="../blog.html">Blog</a></li> -->
                                 <li><a href="mailto:jamie@studiobud.ca?subject=Hello!">Contact</a></li>
                             </ul>
                         </nav>
@@ -105,7 +107,7 @@
                             <p>Copyright &copy; 2017 <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">Jamie Kwan</a></p>
                         </div>
                     </div>
-                    <div class="col-md-6  col-xl-6 text-right">
+                    <div class="col-md-6 col-xl-6 text-right">
                         <ul class="list-inline social-icons">
                             <li><a href="http://www.facebook.com/jamiemkwan" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="http://www.twitter.com/jamiemkwan" target="_blank"><i class="fa fa-twitter"></i></a></li>
@@ -126,39 +128,42 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/jquery-1.11.3.min.js"><\/script>')</script>
         <!-- ===============    Bootstrap core jquery     =============== -->
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="../js/bootstrap.min.js"></script>
 
         <!-- ===============    modernizr core jquery     =============== -->
-        <script type="text/javascript" src="js/modernizr.custom.js"></script>
+        <script type="text/javascript" src="../js/modernizr.custom.js"></script>
 
         <!-- ===============    classie core jquery     =============== -->
-        <script type="text/javascript" src="js/classie.js"></script>
+        <script type="text/javascript" src="../js/classie.js"></script>
 
         <!-- ===============    pathLoader core jquery     =============== -->
-        <script type="text/javascript" src="js/pathLoader.js"></script>
+        <script type="text/javascript" src="../js/pathLoader.js"></script>
 
         <!-- ===============    imagesloaded core jquery     =============== -->
-        <script type="text/javascript" src="js/imagesloaded.pkgd.min.js"></script>
+        <script type="text/javascript" src="../js/imagesloaded.pkgd.min.js"></script>
         
         <!-- ===============    maps api core JavaScript     =============== -->
         <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=true"></script>
 
         <!-- ===============    stellar core jquery     =============== -->
-        <script type="text/javascript" src="js/jquery.stellar.min.js"></script>
+        <script type="text/javascript" src="../js/jquery.stellar.min.js"></script>
 
         <!-- ===============    smooth core jquery     =============== -->
-        <script type="text/javascript" src="js/smooth.js"></script>
+        <script type="text/javascript" src="../js/smooth.js"></script>
 
         <!-- ===============    isotope core jquery     =============== -->
-        <script type="text/javascript" src="js/isotopoe.pkgd.min.js"></script>
+        <script type="text/javascript" src="../js/isotopoe.pkgd.min.js"></script>
 
         <!-- ===============    masonary core jquery     =============== -->
-        <script type="text/javascript" src="js/masonary.min.js"></script>
+        <script type="text/javascript" src="../js/masonary.min.js"></script>
 
         <!-- ===============    ROW JavaScript Plugins    =============== -->
-        <script type="text/javascript" src="js/row-plugins.js"></script>
+        <script type="text/javascript" src="../js/row-plugins.js"></script>
 
         <!-- ===============    Active core JavaScript     =============== -->
-        <script type="text/javascript" src="js/active.js"></script>
+        <script type="text/javascript" src="../js/active.js"></script>
+
+        <!-- ===============    Lightbox JavaScript     =============== -->
+        <script src="../js/lightbox.js"></script>
     </body>
 </html>
