--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,7 +83,7 @@
                         <nav>
                             <ul>
                                 <li class="active"><a href="#work">Work</a></li>
-                                <li><a href="profile.html">Profile</a></li>
+                                <li><a href="/profile">Profile</a></li>
                                 <!-- <li><a href="blog.html">Blog</a></li> -->
                                 <li><a href="mailto:jamie@studiobud.ca?subject=Hello!">Contact</a></li>
                             </ul>
