--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -85,8 +85,8 @@
                         <nav>
                             <ul>
                                 <li class="active"><a href="http://www.jamiemkwan.com">Work</a></li>
-                                <li><a href="../profile.html">Profile</a></li>
-                                <!-- <li><a href="../blog.html">Blog</a></li> -->
+                                <li><a href="../profile">Profile</a></li>
+                                <!-- <li><a href="../blog">Blog</a></li> -->
                                 <li><a href="mailto:jamie@studiobud.ca?subject=Hello!">Contact</a></li>
                             </ul>
                         </nav>
