--- a/css/theme.css
+++ b/css/theme.css
@@ -838,7 +838,10 @@ hr {
 .social-icons a:hover {
   color: #fff;
 }
-
+@media (max-width: 750px) {
+  .copyright { float: center; }
+  .social-icons { text-align: center; }
+}
 
   /* ================Overhaul Styling================ */
 
