change copyright class to text-align instead of float

--- a/css/theme.css
+++ b/css/theme.css
@@ -839,7 +839,7 @@ hr {
   color: #fff;
 }
 @media (max-width: 750px) {
-  .copyright { float: center; }
+  .copyright { text-align: center; }
   .social-icons { text-align: center; }
 }
 
