--- a/css/theme.css
+++ b/css/theme.css
@@ -413,6 +413,10 @@ hr {
   margin: 30px 0px;
 }
 
+@media (max-width: 750px){
+  .page-title h1{ font-size: 70px }
+}
+
 /* =========================================================== 
     05. WORK GRID STYLE
 ============================================================ */
