--- a/css/theme.css
+++ b/css/theme.css
@@ -414,7 +414,9 @@ hr {
 }
 
 @media (max-width: 750px){
-  .page-title h1{ font-size: 55px }
+  .page-title h1{ 
+  	font-size: 50px;
+  	line-height: 65px  }
 }
 
 /* =========================================================== 
