--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,9 +103,10 @@
                     <div class="col-md-6 col-xl-6">
                         <div class="copyright">
                             <p>Copyright &copy; 2017 <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">Jamie Kwan</a></p>
+                            <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> on GitHub</p>
                         </div>
                     </div>
-                    <div class="col-md-6  col-xl-6 text-right">
+                    <div class="col-md-6 col-xl-6 text-right">
                         <ul class="list-inline social-icons">
                             <li><a href="http://www.facebook.com/jamiemkwan" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="http://www.twitter.com/jamiemkwan" target="_blank"><i class="fa fa-twitter"></i></a></li>
