--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -187,6 +187,7 @@
                     <div class="col-md-6 col-xl-6">
                         <div class="copyright">
                             <p>Copyright &copy; 2017 <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">Jamie Kwan</a></p>
+                            <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> on GitHub</p>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-6 text-right">
