--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,9 @@
 	<link href="assets/css/custom.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/BootstrapXL.css" />
 
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Inconsolata" rel="stylesheet">
+
+
 	<!-- ===============    Smooth Scroll Script     =============== -->
 	<script src="assets/js/typed.min.js"></script>
 	<script>
