--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,8 @@
 	<link href="assets/css/custom.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/BootstrapXL.css" />
 
-	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Inconsolata" rel="stylesheet">
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Inconsolata|Montserrat|Open+Sans" rel="stylesheet">
 
 
 	<!-- ===============    Smooth Scroll Script     =============== -->
