adjust style html

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -4,7 +4,7 @@ title: Jamie Kwan | Experience Design & Strategy
 ---
 
 <!-- HOME -->
-	<section id="home" class="module-hero module-parallax module-fade module-full-height bg-dark-50" style="color:{{page.color}}">
+	<section id="home" class="module-hero module-parallax module-fade module-full-height bg-dark-50" style="background-color:{{page.color}}">
 
 		<div class="hs-caption container">
 			<div class="caption-content">
