--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -62,7 +62,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 				<div class="row">
 
-					<div class="col-md-8 offset-md-2">
+					<div class="col-sm-8">
 
 						{% for image in page.images %}
 						<p><img src="{{ image.image_path }}" alt="{{ image.title }}"></p>
