test font adjustment

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -11,7 +11,7 @@ title: Jamie Kwan | Experience Design & Strategy
 				<div class="hs-title-size-3 font-alt m-b-20">
 					{{ page.title }}
 				</div>
-				<div class="hs-title-size-1 font-inc">
+				<div class="hs-title-size-1 font-alt">
 					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean<br> commodo ligula eget dolor. Aenean massa.
 				</div>
 			</div>
@@ -67,7 +67,7 @@ title: Jamie Kwan | Experience Design & Strategy
 						{% for image in page.images %}
 						<p><img src="{{ image.image_path }}" alt="{{ image.title }}"></p>
 						{% endfor %}
-						
+
 					</div>
 
 				</div><!-- .row -->
