--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -8,7 +8,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 		<div class="hs-caption container">
 			<div class="caption-content">
-				<div class="hs-title-size-1 font-alt m-b-20">
+				<div class="hs-title-size-1 font-alt m-b-20" style="text-transform:uppercase">
 					{{ page.title }}
 				</div>
 				<div class="hs-title-size-3 font-alt">
