--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -12,7 +12,7 @@ title: Jamie Kwan | Experience Design & Strategy
 					{{ page.title }}
 				</div>
 				<div class="hs-title-size-3 font-alt">
-					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean<br> commodo ligula eget dolor. Aenean massa.
+					{{ page.oneline }}
 				</div>
 			</div>
 		</div>
