add conditional bgimage

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -4,7 +4,13 @@ title: Jamie Kwan | Experience Design & Strategy
 ---
 
 <!-- HOME -->
+	{% for text in page.color %}
 	<section id="home" class="module-hero module-parallax module-fade module-full-height bg-dark-50" style="background-color:{{page.color}}">
+	{% endfor%}
+
+	{% for text in page.bgimage %}
+	<section id="home" class="module-hero module-parallax module-fade module-full-height bg-dark-50" data-background="assets/images/{{page.bgimage}}.jpg">
+	{% endfor%}
 
 		<div class="hs-caption container">
 			<div class="caption-content">
