--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -18,7 +18,7 @@ title: Jamie Kwan | Experience Design & Strategy
 					{{ page.title }}
 				</div>
 				<div class="hs-title-size-3 font-alt">
-					{{ page.oneline }}
+					{{ page.oneliner }}
 				</div>
 			</div>
 		</div>
