--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -50,8 +50,7 @@ title: Jamie Kwan | Experience Design & Strategy
 					</div>
 
 					<div class="col-sm-6">
-						<p>The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators.</p>
-						<p>The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators.</p>
+						{{ page.primary }}
 					</div>
 
 				</div>
