--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -50,7 +50,7 @@ title: Jamie Kwan | Experience Design & Strategy
 					</div>
 
 					<div class="col-sm-6">
-						{{ page.primary }}
+						{{ content }}
 					</div>
 
 				</div>
