--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,9 +71,9 @@
 					<ul class="nav navbar-nav navbar-right">
 
 						<li><a href="https://jamiemkwan.com">Home</a></li>
-						<!-- <li><a href="about.html">About</a></li> -->
+						<li><a href="/about">About</a></li>
 						<li><a href="https://medium.com/design-on-the-mind" target="_blank">Ideas</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="/contact">Contact</a></li>
 		
 					</ul>
 				</div>
