--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -67,7 +67,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 				<div class="row">
 
-					<div class="col-sm-6 offset-col-3">
+					<div class="col-sm-6 col-sm-offset-3">
 
 						{% for image in page.images %}
 						<p><img src="{{ image.image_path }}" alt="{{ image.title }}" class="img-responsive"></p>
