--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -74,7 +74,7 @@ title: Jamie Kwan | Experience Design & Strategy
 					</div>
 
 						{% for text in image.caption-right %}
-							<div class="col-sm-1 desktop-only">
+							<div class="col-sm-1">
 								<p><strong>Left:</strong><br>{{ image.caption-right }}</p>
 							</div>
 						{% endfor %}
