--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -91,9 +91,9 @@ title: Jamie Kwan | Experience Design & Strategy
 			
 				<div class="pagination font-inc text-uppercase">
 			
-					<a href="/{% page.prev %}"><i class="fa fa-angle-left"></i> Prev</a>
+					<a href="#"><i class="fa fa-angle-left"></i> Prev</a>
 					<a href="http://jamiemkwan.com">Home</a>
-					<a href="/{% page.prev %}">Next <i class="fa fa-angle-right"></i></a>
+					<a href="#">Next <i class="fa fa-angle-right"></i></a>
 			
 				</div>
 			
