--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -73,8 +73,8 @@ title: Jamie Kwan | Experience Design & Strategy
 						<p><img src="{{ image.image_path }}" alt="{{ image.title }}" class="img-responsive"></p>
 					</div>
 					{% for text in image.caption-right %}
-						<div class="col-sm-1 align-items-end">
-							<p><strong>Left:</strong><br>{{ image.caption-right }}</p>
+						<div class="col-sm-2 align-items-end">
+							<p class="image-caption"><strong>Left:</strong><br>{{ image.caption-right }}</p>
 						</div>
 					{% endfor %}
 				</div>
