--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -38,6 +38,16 @@ Place here your custom CSS styles
 	font-size: 20px;
 }
 
-.theme-color span{
+/*FIX*/
+.theme-color span{ 
 	border-bottom: 4px solid rgb(1,111,185)
 }
+/**/
+
+
+.image-caption p{
+	font-size: 10pt;
+	font-style: italic;
+	color: 50%;
+}
+
