--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -19,6 +19,8 @@ title: Jamie Kwan | Experience Design & Strategy
 				</div>
 				<div class="hs-title-size-3 font-alt">
 					{{ page.oneliner }}
+					<br>
+					<i class="fa fa-angle-down"></i>
 				</div>
 			</div>
 		</div>
