--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -746,10 +746,10 @@ Sections
 	margin-bottom: 10px;
 	font-size: 12px;
 }
-
+/*
 .module-title + .module-subtitle {
 	margin-top: -35px;
-}
+}*/
 
 /* Sections dividers */
 
