--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -70,9 +70,9 @@ title: Jamie Kwan | Experience Design & Strategy
 				{% for image in page.images %}
 				<div class="row">
 					
-					<div class="col-sm-6 col-sm-offset-3 wow fadeInUp">
+					<div class="col-sm-6 col-sm-offset-3">
 
-						<p><img src="{{ image.image_path }}" alt="{{ image.title }}" class="img-responsive"></p>
+						<p><img src="{{ image.image_path }}" alt="{{ image.title }}" class="img-responsive wow fadeInUp"></p>
 					</div>
 <!-- 					{% for text in image.caption-right %}
 						<div class="col-sm-2 align-items-end">
