--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -93,9 +93,9 @@ title: Jamie Kwan | Experience Design & Strategy
 			
 				<div class="pagination font-inc text-uppercase">
 			
-					<a href="{{ pagination.prev_path }}"><i class="fa fa-angle-left"></i> Prev</a>
+					<a href="#"><i class="fa fa-angle-left"></i> Prev</a>
 					<a href="http://jamiemkwan.com">Home</a>
-					<a href="{{ pagination.next_path }}">Next <i class="fa fa-angle-right"></i></a>
+					<a href="#">Next <i class="fa fa-angle-right"></i></a>
 			
 				</div>
 			
