--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -86,7 +86,7 @@ title: Jamie Kwan | Experience Design & Strategy
 		</section>
 		<!-- /PORTFOLIO CONTENT -->
 
-		<!-- PAGINATION -->
+		<!-- PAGINATION 
 		<section class="module-small p-t-50">
 
 			<div class="container">
@@ -102,7 +102,7 @@ title: Jamie Kwan | Experience Design & Strategy
 			</div>
 
 		</section>
-		<!-- /PAGINATION -->
+		 /PAGINATION -->
 
 		<!-- DIVIDER -->
 		<hr class="divider-w">
