--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
 	<!-- /PRELOADER -->
 
 	<!-- NAVIGATION -->
-	<nav class="navbar navbar-custom navbar-transparent navbar-fixed-top" role="navigation">
+	<nav class="navbar navbar-custom navbar-transparent navbar-fixed-top navbar-expand-xl" role="navigation">
 
 			<div class="container">
 		
