--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -19,6 +19,10 @@ Place here your custom CSS styles
   #mobile-only { display:block; }
 }
 
+@media (min-width: 1200px) .hs-title-size-1 .hs-title-size-2 .hs-title-size-3 .hs-title-size-4{
+  font-size: 110%;
+}
+
 
 #typed {
 	border-bottom: 7px solid rgb(1,111,185);
@@ -47,4 +51,3 @@ Place here your custom CSS styles
 	font-style: italic;
 	color: 50%;
 }
-
