fix image width

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -82,7 +82,7 @@ title: Jamie Kwan | Experience Design & Strategy
 					
 					<div class="col-sm-6 col-sm-offset-3  wow fadeInUp">
 
-						<p><img src="{{ image.image_path }}" alt="{{ image.title }}" class="img-responsive"></p>
+						<p><img src="{{ image.image_path }}" alt="{{ image.title }}" class="img-fluid"></p>
 					</div>
 <!-- 					{% for text in image.caption-right %}
 						<div class="col-sm-2 align-items-end">
