fix wow.js activation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,12 @@
 	      stringsElement: '#typed-strings'
 	    });
 	</script>
+	
+	<!-- ===============    wow.js activate     =============== -->
+	<script src="js/wow.min.js"></script>
+	<script>
+	 	new WOW().init();
+	</script>
 
 </head>
 
