--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
 	</script>
 	
 	<!-- ===============    wow.js activate     =============== -->
-	<script src="js/wow.min.js"></script>
+	<script src="assets/js/wow.min.js"></script>
 	<script>
 	 	new WOW().init();
 	</script>
