--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -80,10 +80,10 @@ title: Jamie Kwan | Experience Design & Strategy
 				{% for image in page.images %}
 				<div class="row">
 					
-					<div class="col-sm-6 col-sm-offset-3 img-fluid wow fadeInUp">
+					<div class="col-sm-6 col-sm-offset-3 img-fluid wow fadeInUp atom-work-item">
 						<p>
-							<a href="{{ image.image_path }}" data-lightbox="{{ image.id }}">
-								<img src="{{ image.image_path }}" alt="{{ image.title }}">
+							<a href="{{ image.image_path }}" data-lightbox="{{ page.featureimg }">
+								<img src="{{ image.image_path }}" alt="{{ image.title }}"/>
 							</a>
 						</p>
 					</div>
