--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -177,6 +177,6 @@
 	<script src="assets/js/wow.min.js"></script>
 	<script src="assets/js/contact.js"></script>
 	<script src="assets/js/custom.js"></script>
-
+	<script src="assets/js/lightbox.js"></script>
 </body>
 </html>
